samples/_failures_safe/1761004395_9a7759_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7ebae51.c: In function ‘main’:
./samples/SAFE/__tmp_e7ebae51.c:183:13: error: expected expression at end of input
  183 |             case
      |             ^~~~
./samples/SAFE/__tmp_e7ebae51.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7ebae51.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7ebae51.c:183:13: error: expected declaration or statement at end of input
